# rstark

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md
.circleci/: config.yml
benches/: BENCHMARKS.md  benchmark.rs  stark.rs
examples/: not_equal.rs  squares.rs  stark.rs
examples_bak/: not_equal.rs  squares.rs
src/: channel.rs  field.rs  field_element.rs  fri.rs  lib.rs  main.rs  mpolynomial.rs  polynomial.rs  stark.rs  test.rs  tree.rs
